# OpenGL_learning

./: .clang-format  .gitignore  CMakeLists.txt
include/: Camera.h  Material.h  Mesh.h  PointLight.h  Shader.h  Texture.h  mat.h
shaders/: basic.frag  basic.vert
src/: Camera.cpp  Material.cpp  Mesh.cpp  PointLight.cpp  Shader.cpp  Texture.cpp  main.cpp  mat.cpp
